--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+title: ForgtAI : International Workshop on Forging Trust in Artificial Intelligence - Workshop
+description: collocated with IJCNN 2025, 30 Jun-5 Jul 2025 Rome (Italy)
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
