--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: ForgtAI : International Workshop on Forging Trust in Artificial Intellige
 description: collocated with IJCNN 2025, 30 Jun-5 Jul 2025 Rome (Italy)
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
