--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ForgtAI : International Workshop on Forging Trust in Artificial Intelligence - Workshop
+title: ForgtAI International Workshop on Forging Trust in Artificial Intelligence - Workshop
 description: collocated with IJCNN 2025, 30 Jun-5 Jul 2025 Rome (Italy)
 show_downloads: false
 google_analytics:
