--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: collocated with the International Joint Conference on Neural Networ
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
+header:
+  background_color: "#E5E5DF"
