--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,5 @@ show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
 header:
+  image: ./ForgtAI_logo.png
   background_color: "#E5E5DF"
