Update _config.yml without title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: ForgtAI International Workshop on Forging Trust in Artificial Intelligence - Workshop
-description: collocated with the International Joint Conference on Neural Networks (IJCNN), 30 Jun-5 Jul 2025 Rome (Italy)
+title: 
+description: 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
